# Content-Reels

./: .gitignore  BENCHMARKS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v6-DISCOVERY.md
.planning/phases/01-pipeline-spine-ingest-transcribe/: 01-01-PLAN.md  01-CONTEXT.md  01-SUMMARY.md
.planning/phases/02-clip-selection-via-claude/: 02-SUMMARY.md
.planning/phases/03-render-cut-reframe-captions/: 03-SUMMARY.md
.planning/phases/04-localhost-ui-job-runner/: 04-SUMMARY.md
.planning/phases/05-windows-cross-platform-port/: 05-CONTEXT.md  05-SUMMARY.md
.planning/phases/06-interactive-crop-preview/: 06-CONTEXT.md  06-SUMMARY.md
.planning/phases/07-ui-polish-live-logs/: 07-SUMMARY.md
.planning/phases/08-render-audio-caption-fit-reframe/: 08-SUMMARY.md
.planning/phases/23-test-harness-ci-foundation/: 23-PLAN.md  23-SUMMARY.md
.planning/phases/24-backend-unit-coverage/: 24-PLAN.md  24-SUMMARY.md
.planning/phases/25-http-api-integration/: 25-PLAN.md  25-SUMMARY.md
.planning/phases/26-reliability-atomic-manifests/: 26-PLAN.md  26-SUMMARY.md
.planning/phases/27-upload-state-lifecycle/: 27-PLAN.md  27-SUMMARY.md
.planning/phases/28-validation-hardening/: 28-PLAN.md  28-SUMMARY.md
.planning/phases/29-shared-crop-math/: 29-PLAN.md  29-SUMMARY.md
.planning/phases/30-frontend-robustness/: 30-PLAN.md  30-SUMMARY.md
.planning/phases/31-frontend-correctness/: 31-PLAN.md  31-SUMMARY.md
.planning/phases/32-accessibility/: 32-PLAN.md  32-SUMMARY.md
.planning/phases/33-word-cut-snapping/: 33-PLAN.md  33-SUMMARY.md
.planning/phases/34-karaoke-captions/: 34-PLAN.md  34-SUMMARY.md
.planning/phases/35-e2e-suite/: 35-PLAN.md  35-SUMMARY.md
.planning/phases/36-final-verification/: 36-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
content_machine/: __init__.py  app.py  captions.py  cli.py  config.py  hwaccel.py  jobs.py  logging_setup.py  render.py  select.py  transcribe.py
content_machine/static/: crop.js
content_machine/templates/: editor.html  index.html  job.html
scripts/: benchmark.py  seed_fixture.py  setup.ps1  setup.sh
tests/: conftest.py  test_api.py  test_app.py  test_captions_extra.py  test_cli.py  test_config.py  test_crop_parity.py  test_harness.py  test_hwaccel.py  test_lifecycle.py  test_logging_setup.py  test_pipeline.py  test_reliability.py  test_render.py  test_render_orchestration.py  test_select.py  test_select_transcribe.py  test_validation.py  test_word_snapping.py
tests/e2e/: conftest.py  test_e2e_edge.py  test_e2e_editor.py  test_e2e_index.py  test_e2e_job_preview.py  test_e2e_progress_clips.py  test_e2e_quickcrop.py  test_e2e_real_render.py
tools/hyperframes/: package-lock.json  package.json
