[project]
name = "content-machine"
version = "0.1.0"
description = "Local-first LinkedIn video clipper — transcribe, select, render captioned clips in multiple aspect ratios."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "pydantic>=2.7",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
content-machine = "content_machine.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["content_machine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
