[project]
name = "content-machine"
version = "0.1.0"
description = "Local-first LinkedIn video clipper — transcribe, select, render captioned clips in multiple aspect ratios."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "pydantic>=2.7",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5", "httpx>=0.27", "ruff>=0.6", "pytest-playwright>=0.5"]

[project.scripts]
content-machine = "content_machine.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["content_machine"]

[tool.setuptools.package-data]
content_machine = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=content_machine --cov-report=term-missing"
markers = [
    "e2e: end-to-end browser (Playwright) tests — excluded from default CI run",
    "slow: tests that run real ffmpeg/whisper/claude — excluded from default CI run",
]

[tool.coverage.run]
source = ["content_machine"]
omit = ["*/__init__.py"]

[tool.coverage.report]
show_missing = true
precision = 1

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Pragmatic starting set for a previously-unlinted codebase: pyflakes (F),
# a subset of pycodestyle (E/W), and import sorting (I). Expand over time.
select = ["F", "E", "W", "I", "UP", "B"]
ignore = [
    "E501",  # line length is enforced by formatter intent, not hard-failed here
    "B008",  # FastAPI uses `Depends()`/`File()` defaults in signatures by design
    "E402",  # a couple modules intentionally configure before importing submodules
    # B023: every flagged closure (app._rerender_worker cb, render.py ffmpeg-cmd
    # lambdas) is created AND consumed inside the same loop iteration — no
    # late-binding escape. Bugbear flags the shape regardless. Scoped out, not
    # silently: revisit if any of these closures ever outlive their iteration.
    "B023",
]

[tool.ruff.lint.per-file-ignores]
# Tests use a terse `x = ...; x.write(...)` + `lambda` stub style throughout.
"tests/*" = ["B", "E722", "E702", "E731"]
